--- a/index.html
+++ b/index.html
@@ -1,10 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head.>
+    <head>
         <meta charset="UTF-8">
         <title>css color practice</title>
-    </head.>
-    <body>
+        <link rel="stylesheet" href="styles/style.css">
 
+    </head>
+    <body>
+      <h1>pHScale</h1>
+      <p class="fourteen">14.0 VERY ALKALINE</p>
+      <p class="thirteen">13.0</p>
+      <p class="twelve">12.0</p>
+      <p class="eleven">11.0</p>
+      <p class="ten">10.0</p>
+      <p class="nine">9.0</p>
+      <p class="eight">8.0</p>
+      <p class="seven">7.0 NEUTRAL</p>
+      <p class="six">6.0</p>
+      <p class="five">5.0</p>
+      <p class="four">4.0</p>
+      <p class="three">3.0</p>
+      <p class="two">2.0</p>
+      <p class="one">1.0 VERY ACID</p>
     </body>
 </html>
