--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
       <p class="four">4.0</p>
       <p class="three">3.0</p>
       <p class="two">2.0</p>
-      <p class="one">1.0 VERY ACID</p>
+      <p class="one">1.0</p>
+      <p class="zero">0.0 VERY ACID</p>
     </body>
 </html>
